# e7020e_project_Group10

./: Cargo.toml  README.md
.cargo/: config.toml
baseboard/: baseboard.kicad_pcb  baseboard.kicad_prl  baseboard.kicad_pro  baseboard.kicad_sch  baseboard.kicad_sch-bak  fp-lib-table  sym-lib-table  ~_autosave-baseboard.kicad_pcb.lck
command-parser/src/: lib.rs
e-7020-e-sw-simon-pergel/: README.md  designrule_template.kicad_pcb  designrule_template.kicad_prl  designrule_template.kicad_pro  fp-lib-table  rtic_bare7d.asm  sym-lib-table
e-7020-e-sw-simon-pergel/baseboard/: baseboard.csv  baseboard.kicad_pro  baseboard.kicad_sch-bak  baseboardComponentCheckList.csv  fp-info-cache  fp-lib-table  sym-lib-table
e-7020-e-sw-simon-pergel/command-parser/src/: lib.rs
e-7020-e-sw-simon-pergel/examples/: rtic_bare10.md  rtic_bare10.rs  rtic_bare4.md  rtic_bare5.rs  rtic_bare7b.rs  rtic_bare8b.rs  rtic_bare9.md  rtic_bare9.rs  rtic_blinky.rs  rtic_ssd1306_52833.rs  rtic_usb_serial.rs
e-7020-e-sw-simon-pergel/software/: main.rs  totp-sw.rs
examples/: main.rs  rtic_bare10.rs  rtic_bare2.md  rtic_bare2.rs  rtic_bare3.rs  rtic_bare6.md  rtic_bare7.md  rtic_bare7.rs  rtic_bare7c.rs  rtic_bare7d.rs  rtic_bare8.md  rtic_bare8.rs  rtic_crash.rs  rtic_hello.rs  rtic_interior_mut.rs  rtic_panic.rs  rtic_usb_serial_interrupt.rs  serialwrite.rs
software/examples/: rtic_bare1.md  rtic_bare1.rs  rtic_bare1_wrapping.rs  rtic_bare3.md  rtic_bare3_dwt.rs  rtic_bare4.rs  rtic_bare5.md  rtic_bare6.rs  rtic_bare8c.rs  rtic_saadc_raw.rs  rtic_ssd1306.rs  test_ppk.rs
