[package]
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
edition = "2021"
readme = "README.md"
name = "app"
version = "0.1.0"

[workspace]
members = ["command-parser"]

[dependencies]
cortex-m = { version = "0.7.4", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rtic = "1.1.4"
# for RAW exception handling
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7" # we cannot currently use latest for non-blocking operations

# Panic handlers
panic-probe = { version = "0.3.2", features = ["print-defmt"] }  ######################
panic-rtt-target = { version = "0.2.0" }
# panic-halt = { version = "1.0.0" }

# Tracing
rtt-target = { version = "0.6.1" }

# Monotonic timers
systick-monotonic = "1.0.0"
dwt-systick-monotonic = "1.0.0"
nb = "1.1.0"
usb-device = {version = "0.3.2", features = ["control-buffer-256"]}
usbd-serial = "0.2.2"
usbd-hid = "0.8.2"

command-parser = { path = "command-parser" }
embedded-graphics = "0.8.1"
ssd1306 = "0.9.0"
defmt = "1.0.1"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-nrf = { version = "0.9.0", default-features = false, features = ["nrf52840", "time-driver-rtc1", "gpiote"] }
embassy-usb = "0.5.1"
static_cell = "2.1.1"
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
heapless = "0.9.2"
usbd-human-interface-device = "0.6.0"
frunk = {version = "0.4.4", default-features = false}
panic-halt = "1.0.0"
nrf52833-pac = "0.12.2"
hmac = {version = "0.12.1", default-features = false}
sha1 = {version = "0.10.6", default-features = false}
embedded-storage = {version = "0.3.1", default-features = false}
base32ct = {version = "0.3.1", default-features = false}

# HAL
[dependencies.nrf52840-hal]
version = "0.18.0"
features = ["rt"]
optional = true

[dependencies.nrf52833-hal]
version = "0.18.0"
features = ["rt"]
optional = true

[features]
52840 = ["nrf52840-hal"]
52833 = ["nrf52833-hal"]
default = ["52833"]

[profile.dev]
incremental = false # better debug 
codegen-units = 1   # better debug
opt-level = 0       # no optimization
lto = false         # no optimization
# overflow-checks = false # uncomment to disable overflow checks for dev/debug builds  

[profile.release]
incremental = false    # better debug and also better optimizations
codegen-units = 1      # better debug and also better optimizations
debug = true           # symbols are nice and they don't increase the size on Flash
lto = true             # better optimizations
overflow-checks = true # set true to enable overflow checks for release builds
